# undname

./: .gitignore  README.md  README.rst  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml
test/: test_undname.py
tests/: test_undname.py
undname/: __init__.py  undname_build.py
undname/src/: config.h  msvcrt.h  undname.c
undname/src/wine/: port.h
