[metadata]
name = undname
description = CFFI wrapper for wine undname module
author = Igor Kozyrenko
author_email = igor@ikseek.com
url = https://github.com/ikseek/undname
license = LGPLv2.1
project_urls =
    Bug Reports=https://github.com/ikseek/undname/issues
    Source=https://github.com/ikseek/undname
version = 0.1.1
long_description = file: README.rst
platforms = Linux, MacOS, Windows
keywords = undname, msvc
classifiers =
    Development Status :: 4 - Beta
    Topic :: Software Development :: Debuggers
    Intended Audience :: Developers
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.5, <4
setup_requires = cffi
install_requires = cffi
test_suite = tests.test_undname

[options.package_data]
* = src/*.h, src/wine/*.h
